chore: disable geth devmode

--- a/packages/bundler/localconfig/bundler.rip7560.config.json
+++ b/packages/bundler/localconfig/bundler.rip7560.config.json
@@ -15,6 +15,6 @@
   "autoBundleMempoolSize": 10,
   "rip7560": true,
   "rip7560Mode": "PULL",
-  "gethDevMode": true,
+  "gethDevMode": false,
   "unsafe": true
 }
